...
            </View>

            <TouchableOpacity
                onPress={onFlipWithoutPrediction}
                style={styles.skipBtn}
            >
                <Text style={styles.skipBtnText}>Viska ilma ennustuseta</Text>
            </TouchableOpacity>

            <TouchableOpacity
                style={styles.predictionCloseButton}
                onPress={onClose}
                accessibilityRole="button"
...
